// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Loader 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="16"
      cy="3"
      r="2.77267"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="1.86328"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.125s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.265408"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.25s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.375s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.0555565"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.625s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.755695"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.75s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="2.14946"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.875s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given className 1`] = `
<div
  className="loader"
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="16"
      cy="3"
      r="2.77267"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="1.86328"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.125s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.265408"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.25s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.375s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.0555565"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.625s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.755695"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.75s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="2.14946"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.875s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given color 1`] = `
<div
  style={
    Object {
      "fill": "red",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="16"
      cy="3"
      r="2.77267"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="1.86328"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.125s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.265408"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.25s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.375s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.0555565"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.625s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.755695"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.75s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="2.14946"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.875s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given size 1`] = `
<div
  style={
    Object {
      "fill": "red",
      "height": 100,
      "margin": "0 auto",
      "width": 100,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="16"
      cy="3"
      r="2.77267"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="1.86328"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.125s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.265408"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.25s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.375s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.0555565"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.625s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.755695"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.75s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="2.14946"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.875s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given style 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "marginTop": 100,
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="16"
      cy="3"
      r="2.77267"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="1.86328"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.125s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.265408"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.25s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.375s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.0555565"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.625s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.755695"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.75s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="2.14946"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.875s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given type balls 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 12 A4 4 0 0 0 4 20 A4 4 0 0 0 4 12"
      transform="translate(2 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.25;1"
        repeatCount="indefinite"
        type="translate"
        values="-8 0; 2 0; 2 0;"
      />
    </path>
    <path
      d="M4 12 A4 4 0 0 0 4 20 A4 4 0 0 0 4 12"
      transform="translate(12 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.35;1"
        repeatCount="indefinite"
        type="translate"
        values="2 0; 12 0; 12 0;"
      />
    </path>
    <path
      d="M4 12 A4 4 0 0 0 4 20 A4 4 0 0 0 4 12"
      transform="translate(22 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.45;1"
        repeatCount="indefinite"
        type="translate"
        values="12 0; 22 0; 22 0;"
      />
    </path>
    <path
      d="M4 12 A4 4 0 0 0 4 20 A4 4 0 0 0 4 12"
      transform="translate(32 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.55;1"
        repeatCount="indefinite"
        type="translate"
        values="22 0; 32 0; 32 0;"
      />
    </path>
  </svg>
</div>
`;

exports[`Loader with given type bars 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M 0 12 V 20 H 4 V 12 Z"
      transform="translate(2)"
    >
      <animate
        attributeName="d"
        begin="0"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8"
        keyTimes="0;.2;.5;1"
        repeatCount="indefinite"
        values="M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z"
      />
    </path>
    <path
      d="M 0 12 V 20 H 4 V 12 Z"
      transform="translate(8)"
    >
      <animate
        attributeName="d"
        begin="0.2"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8"
        keyTimes="0;.2;.5;1"
        repeatCount="indefinite"
        values="M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z"
      />
    </path>
    <path
      d="M 0 12 V 20 H 4 V 12 Z"
      transform="translate(14)"
    >
      <animate
        attributeName="d"
        begin="0.4"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8"
        keyTimes="0;.2;.5;1"
        repeatCount="indefinite"
        values="M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z"
      />
    </path>
    <path
      d="M 0 10.7002 V 21.2998 H 4 V 10.7002 Z"
      transform="translate(20)"
    >
      <animate
        attributeName="d"
        begin="0.6"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8"
        keyTimes="0;.2;.5;1"
        repeatCount="indefinite"
        values="M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z"
      />
    </path>
    <path
      d="M 0 5.16164 V 26.8384 H 4 V 5.16164 Z"
      transform="translate(26)"
    >
      <animate
        attributeName="d"
        begin="0.8"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.8 0.4 0.8"
        keyTimes="0;.2;.5;1"
        repeatCount="indefinite"
        values="M0 12 V20 H4 V12z; M0 4 V28 H4 V4z; M0 12 V20 H4 V12z; M0 12 V20 H4 V12z"
      />
    </path>
  </svg>
</div>
`;

exports[`Loader with given type bubbles 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="0"
      cy="16"
      r="1.47766"
      transform="translate(8 0)"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;0.2;0.7;1"
        repeatCount="indefinite"
        values="0; 4; 0; 0"
      />
    </circle>
    <circle
      cx="0"
      cy="16"
      r="0"
      transform="translate(16 0)"
    >
      <animate
        attributeName="r"
        begin="0.3"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;0.2;0.7;1"
        repeatCount="indefinite"
        values="0; 4; 0; 0"
      />
    </circle>
    <circle
      cx="0"
      cy="16"
      r="0.458341"
      transform="translate(24 0)"
    >
      <animate
        attributeName="r"
        begin="0.6"
        calcMode="spline"
        dur="1.2s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;0.2;0.7;1"
        repeatCount="indefinite"
        values="0; 4; 0; 0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given type cubes 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 12 V20 H8 V12z"
      transform="translate(2 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.25;1"
        repeatCount="indefinite"
        type="translate"
        values="-8 0; 2 0; 2 0;"
      />
    </path>
    <path
      d="M0 12 V20 H8 V12z"
      transform="translate(12 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.35;1"
        repeatCount="indefinite"
        type="translate"
        values="2 0; 12 0; 12 0;"
      />
    </path>
    <path
      d="M0 12 V20 H8 V12z"
      transform="translate(22 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.45;1"
        repeatCount="indefinite"
        type="translate"
        values="12 0; 22 0; 22 0;"
      />
    </path>
    <path
      d="M0 12 V20 H8 V12z"
      transform="translate(32 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="0.8s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.6 0.4 0.8"
        keyTimes="0;.55;1"
        repeatCount="indefinite"
        type="translate"
        values="22 0; 32 0; 32 0;"
      />
    </path>
  </svg>
</div>
`;

exports[`Loader with given type cylon 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 12 V20 H4 V12z"
      transform="translate(0 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0"
        calcMode="spline"
        dur="1.5s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        keyTimes="0;0.3;0.6;1"
        repeatCount="indefinite"
        type="translate"
        values="0 0; 28 0; 0 0; 0 0"
      />
    </path>
    <path
      d="M0 12 V20 H4 V12z"
      opacity="0.5"
      transform="translate(0 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0.1s"
        calcMode="spline"
        dur="1.5s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        keyTimes="0;0.3;0.6;1"
        repeatCount="indefinite"
        type="translate"
        values="0 0; 28 0; 0 0; 0 0"
      />
    </path>
    <path
      d="M0 12 V20 H4 V12z"
      opacity="0.25"
      transform="translate(0 0)"
    >
      <animateTransform
        attributeName="transform"
        begin="0.2s"
        calcMode="spline"
        dur="1.5s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        keyTimes="0;0.3;0.6;1"
        repeatCount="indefinite"
        type="translate"
        values="0 0; 28 0; 0 0; 0 0"
      />
    </path>
  </svg>
</div>
`;

exports[`Loader with given type spin 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 0 A16 16 0 0 0 16 32 A16 16 0 0 0 16 0 M16 4 A12 12 0 0 1 16 28 A12 12 0 0 1 16 4"
      opacity=".25"
    />
    <path
      d="M16 0 A16 16 0 0 1 32 16 L28 16 A12 12 0 0 0 16 4z"
      transform="rotate(348.917 16 16)"
    >
      <animateTransform
        attributeName="transform"
        dur="0.8s"
        from="0 16 16"
        repeatCount="indefinite"
        to="360 16 16"
        type="rotate"
      />
    </path>
  </svg>
</div>
`;

exports[`Loader with given type spinningBubbles 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="16"
      cy="3"
      r="2.77267"
    >
      <animate
        attributeName="r"
        begin="0"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="1.86328"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.125s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.265408"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.25s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.375s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.0555565"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.625s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0.755695"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.75s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="2.14946"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.875s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
    <circle
      cx="16"
      cy="3"
      r="0"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="r"
        begin="0.5s"
        calcMode="spline"
        dur="1s"
        keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
        repeatCount="indefinite"
        values="0;3;0;0"
      />
    </circle>
  </svg>
</div>
`;

exports[`Loader with given type spokes 1`] = `
<div
  style={
    Object {
      "fill": "black",
      "height": 64,
      "margin": "0 auto",
      "width": 64,
    }
  }
>
  <svg
    viewBox="0 0 32 32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(0 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(45 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.125s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(90 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.25s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(135 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.375s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(180 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.5s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(225 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.675s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(270 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.75s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
    <path
      d="M14 0 H18 V8 H14 z"
      opacity=".1"
      transform="rotate(315 16 16)"
    >
      <animate
        attributeName="opacity"
        begin="0.875s"
        dur="1s"
        from="1"
        repeatCount="indefinite"
        to=".1"
      />
    </path>
  </svg>
</div>
`;
